--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="xiamubobby.com.muandroidbootstrap">
+    package="com.xiamubobby.muandroidbootstrap">
 
-    <application
-        android:allowBackup="true"
+    <application android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+>
 
     </application>
 
