--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 buildscript {
-    ext.kotlin_version = "1.0.0"
-    ext.anko_version = "0.8.2"
-    ext.retrofit_version = "2.0.0-beta4"
-    ext.rxjava_version = "1.1.1"
+    ext.kotlin_version = "1.0.1-2"
+    ext.anko_version = "0.8.3"
+    ext.retrofit_version = "2.0.1"
+    ext.rxjava_version = "1.1.0"
     ext.rxbinding_version = "0.4.0"
     ext.rxlifecycle_version = "0.5.0"
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-alpha1'
+        classpath 'com.android.tools.build:gradle:2.0.0-rc1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
     }
@@ -32,7 +32,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 15
@@ -65,12 +65,12 @@ dependencies {
     /**
      * android suppoprts
      */
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.android.support:percent:23.2.0'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:percent:23.2.1'
         //compile 'com.android.support:multidex:1.0.1'
     /**
      * kotlin relatives
